force-app/main/default/objects/Client_Surveys__c/fields/Were_You_Treated_Fair_and_Ethical__c.field-meta.xml
<CustomField>
    <fullName>Were_You_Treated_Fair_and_Ethical__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Do you think you were treated in a fair, ethical, and non-discriminatory fashion throughout the application, training, and PAT?</description>
    <inlineHelpText>Do you think you were treated in a fair, ethical, and non-discriminatory fashion throughout the application, training, and PAT?</inlineHelpText>
    <label>Were You Treated Fair and Ethical</label>
    <type>Checkbox</type>
</CustomField>