force-app/main/default/objects/Client_Surveys__c/fields/Were_Your_Needs_Meet_Through_PAT__c.field-meta.xml
<CustomField>
    <fullName>Were_Your_Needs_Meet_Through_PAT__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Did you feel that your needs were met throughout the PAT in terms of any accommodations you might have needed?</description>
    <inlineHelpText>Did you feel that your needs were met throughout the PAT in terms of any accommodations you might have needed?</inlineHelpText>
    <label>Were Your Needs Meet Through PAT</label>
    <type>Checkbox</type>
</CustomField>