force-app/main/default/objects/Client_Surveys__c/fields/What_Aspects_of_the_Application_Process__c.field-meta.xml
<CustomField>
    <fullName>What_Aspects_of_the_Application_Process__c</fullName>
    <description>What aspects of the application process did you enjoy? Which did you not?</description>
    <inlineHelpText>What aspects of the application process did you enjoy? Which did you not?</inlineHelpText>
    <label>What Aspects of the Application Process</label>
    <length>10000</length>
    <type>LongTextArea</type>
</CustomField>