force-app/main/default/objects/Client_Surveys__c/fields/What_Did_You_Enjoy_About_Working_W_TF__c.field-meta.xml
<CustomField>
    <fullName>What_Did_You_Enjoy_About_Working_W_TF__c</fullName>
    <description>What did you enjoy about working with your facilitator? What didn’t you?</description>
    <inlineHelpText>What did you enjoy about working with your facilitator? What didn’t you?</inlineHelpText>
    <label>What Did You Enjoy About Working W/TF</label>
    <length>10000</length>
    <type>LongTextArea</type>
</CustomField>