force-app/main/default/objects/Client_Surveys__c/fields/What_Have_You_Had_Difficulties_With__c.field-meta.xml
<CustomField>
    <fullName>What_Have_You_Had_Difficulties_With__c</fullName>
    <description>What have you had difficulties with as a working team?</description>
    <inlineHelpText>What have you had difficulties with as a working team?</inlineHelpText>
    <label>What Have You Had Difficulties With</label>
    <length>10000</length>
    <type>LongTextArea</type>
</CustomField>