force-app/main/default/objects/Client_Surveys__c/fields/What_Methods_Do_You_And_Trainer_Use__c.field-meta.xml
<CustomField>
    <fullName>What_Methods_Do_You_And_Trainer_Use__c</fullName>
    <description>What methods do you and your trainer use to encourage your dog to do and not do behaviors?</description>
    <inlineHelpText>What methods do you and your trainer use to encourage your dog to do and not do behaviors?</inlineHelpText>
    <label>What Methods Do You And Trainer Use</label>
    <length>10000</length>
    <type>LongTextArea</type>
</CustomField>