force-app/main/default/objects/Client_Surveys__c/fields/Would_You_Change_The_PAT__c.field-meta.xml
<CustomField>
    <fullName>Would_You_Change_The_PAT__c</fullName>
    <description>Would you change anything about the PAT?</description>
    <inlineHelpText>Would you change anything about the PAT?</inlineHelpText>
    <label>Would You Change The PAT?</label>
    <length>10000</length>
    <type>LongTextArea</type>
</CustomField>