force-app/main/default/objects/Client_Surveys__c/fields/Would_You_Like_Any_Additional_Support__c.field-meta.xml
<CustomField>
    <fullName>Would_You_Like_Any_Additional_Support__c</fullName>
    <description>Would you like any additional support? If so, in what areas?</description>
    <inlineHelpText>Would you like any additional support? If so, in what areas?</inlineHelpText>
    <label>Would You Like Any Additional Support</label>
    <length>10000</length>
    <type>LongTextArea</type>
</CustomField>