force-app/main/default/objects/Client_Surveys__c/fields/Would_You_Like_To_Be_Involved_W_Atlas__c.field-meta.xml
<CustomField>
    <fullName>Would_You_Like_To_Be_Involved_W_Atlas__c</fullName>
    <description>Would you like to be involved with Atlas in any other ways, or do you have other suggestions for us?Let us know.</description>
    <inlineHelpText>Would you like to be involved with Atlas in any other ways, or do you have other suggestions for us?Let us know.</inlineHelpText>
    <label>Would You Like To Be Involved W/Atlas</label>
    <length>10000</length>
    <type>LongTextArea</type>
</CustomField>