force-app/main/default/objects/Client_Surveys__c/fields/Would_You_Recommend_Our_Program__c.field-meta.xml
<CustomField>
    <fullName>Would_You_Recommend_Our_Program__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Would you recommend our program to others?</description>
    <inlineHelpText>Would you recommend our program to others?</inlineHelpText>
    <label>Would You Recommend Our Program</label>
    <type>Checkbox</type>
</CustomField>