force-app/main/default/objects/Client_Surveys__c/fields/Would_You_Recommend_Our_Program_To_Other__c.field-meta.xml
<CustomField>
    <fullName>Would_You_Recommend_Our_Program_To_Other__c</fullName>
    <description>Would you recommend our program to others?</description>
    <inlineHelpText>Would you recommend our program to others?</inlineHelpText>
    <label>Would You Recommend Our Program To Other</label>
    <length>10000</length>
    <type>LongTextArea</type>
</CustomField>