force-app/main/default/objects/Client_Surveys__c/fields/Would_You_Recommend_Trainer__c.field-meta.xml
<CustomField>
    <fullName>Would_You_Recommend_Trainer__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Would you recommend your trainer to another client?</description>
    <inlineHelpText>Would you recommend your trainer to another client?</inlineHelpText>
    <label>Would You Recommend Trainer?</label>
    <type>Checkbox</type>
</CustomField>