force-app/main/default/objects/Client_Surveys__c/fields/Would_You_Recommend_Trainer_Why__c.field-meta.xml
<CustomField>
    <fullName>Would_You_Recommend_Trainer_Why__c</fullName>
    <description>Would you recommend your trainer to another client?</description>
    <inlineHelpText>Would you recommend your trainer to another client?</inlineHelpText>
    <label>Would You Recommend Trainer - Why?</label>
    <length>10000</length>
    <type>LongTextArea</type>
</CustomField>