force-app/main/default/objects/Client_Surveys__c/fields/Would_You_Recommend_Your_TF__c.field-meta.xml
<CustomField>
    <fullName>Would_You_Recommend_Your_TF__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Would you recommend your team facilitator to another client?</description>
    <inlineHelpText>Would you recommend your team facilitator to another client?</inlineHelpText>
    <label>Would You Recommend Your TF</label>
    <type>Checkbox</type>
</CustomField>