force-app/main/default/objects/Client_Surveys__c/fields/Years_Worked_w_Atlas_Trainer__c.field-meta.xml
<CustomField>
    <fullName>Years_Worked_w_Atlas_Trainer__c</fullName>
    <description>How long have you worked with your Atlas trainer?</description>
    <inlineHelpText>How long have you worked with your Atlas trainer?</inlineHelpText>
    <label>Years Worked w/Atlas Trainer</label>
    <precision>4</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>