force-app/main/default/objects/Client_Surveys__c/recordTypes/Atlas_Client_Survey.recordType-meta.xml
<RecordType>
    <fullName>Atlas_Client_Survey</fullName>
    <active>true</active>
    <description>This is for newly certified clients</description>
    <label>Atlas Client Survey</label>
</RecordType>