force-app/main/default/objects/Client_Surveys__c/recordTypes/Client_Annual_Survey.recordType-meta.xml
<RecordType>
    <fullName>Client_Annual_Survey</fullName>
    <active>true</active>
    <description>Given once a year for recertification</description>
    <label>Client Annual Survey</label>
</RecordType>