force-app/main/default/objects/Client_Surveys__c/recordTypes/Client_Monthly_Survey.recordType-meta.xml
<RecordType>
    <fullName>Client_Monthly_Survey</fullName>
    <active>true</active>
    <description>This is to be completed monthly for the 1st 6 months after initial certification (not the New Client Survey)</description>
    <label>Client Monthly Survey</label>
</RecordType>