force-app/main/default/objects/Client_Surveys__c/validationRules/One_to_Ten_Rule.validationRule-meta.xml
<ValidationRule>
    <fullName>One_to_Ten_Rule</fullName>
    <active>true</active>
    <description>Keeps the 1-10 of the survey question from being above 10</description>
    <errorConditionFormula>Rate_the_Application_Process__c &gt; 10</errorConditionFormula>
    <errorDisplayField>Anything_Else__c</errorDisplayField>
    <errorMessage>You must select a number between 1 and 10</errorMessage>
</ValidationRule>